--- a/projects/intro_project/index.html
+++ b/projects/intro_project/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="build/style.css" />
     <meta charset="utf-8">
     <title>intro project</title>
   </head>
